<resources>
    <string name="app_name">Which street La Plata</string>
    <string name="title">Enter the address</string>
    <string name="description">*Remember that the calculation only applies to the urban area, that is, the square formed by streets from 1 to 31 and their perpendiculars from 32 to 72 (not including street 52). Streets 73 to 80 are diagonal.</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="text_output">Enter the street and the number</string>
    <string name="button">Calculate</string>
    <string name="result">The place  is between %1$d and %2$d</string>
    <string name="outOfRangeStreet">The street is out of range</string>
    <string name="outOfRangeNumber">The number is out of range</string>
    <string name="emptyStreet">Enter a street</string>
    <string name="emptyNumber">Enter a number</string>
</resources>