<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/output_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:background="@drawable/back"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/text_output"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/button"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/description"
        android:textColor="#BFBFBF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic__275438"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_street"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:textColorHint="@color/hintTextColor"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <EditText
                android:id="@+id/input_street"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:autofillHints="@string/street"
                android:ems="10"
                android:fontFamily="sans-serif-black"
                android:hint="@string/street"
                android:inputType="number"
                android:maxLength="2" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:textColorHint="@color/hintTextColor"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <EditText
                android:id="@+id/input_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/number"
                android:ems="10"
                android:fontFamily="sans-serif-black"
                android:hint="@string/number"
                android:inputType="number"
                android:maxLength="4" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:fontFamily="sans-serif-black"
        android:gravity="start"
        android:text="@string/title"
        android:textColor="@color/titleColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>